# openligadb

./: pyproject.toml  readme.md  testing.py
docs/: conf.py  index.rst  requirements.txt
docs/openligadb/: api.rst  objects.rst
openligadb/: __init__.py  errors.py  objects.py  openligadb.py  session.py
