[project]
name = "openligadb"
description = "API wrapper for the openliga api."
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
keywords = ["openligadb", "openligadb api", "api", "api wrapper","sports","sport api", "football","football api"]
authors = [
    { name = "martinbndr" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
version = {attr = "openligadb.__version__"}
dependencies = {file = "requirements.txt"}

[project.urls]
GitHub = "https://github.com/martinbndr/openligadb"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"